Support calling Right(f).apply(Right(x)) for f(x)